hphp/test/slow/dv_array/parse-error5.php.expectf

Fatal error: syntax error, unexpected '&' in %s/parse-error5.php on line 5
